# geo-alpha

./: .gitignore  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
api/: Dockerfile  README.md  conftest.py  pyproject.toml
api/src/geoalpha_api/: __init__.py  __main__.py  app.py  schemas.py
api/tests/: test_endpoints.py
docs/: design-notes.md  quant-to-geospatial-mapping.md
engine/: CMakeLists.txt  README.md
engine/bench/: bench.cpp
engine/bindings/: bindings.cpp
engine/include/geoalpha/: state_space.hpp
engine/src/: kalman.cpp  linalg.cpp  ukf.cpp
engine/tests/: test_kalman.cpp  test_linalg.cpp  test_ukf.cpp
infra/grafana/: prometheus.yml
infra/helm/geo-alpha/: Chart.yaml  values.yaml
infra/helm/geo-alpha/templates/: api.yaml  service-and-web.yaml
infra/k8s/: api.yaml  kustomization.yaml  namespace.yaml  service.yaml  web.yaml
ml/src/geoalpha_ml/: __init__.py
ml/src/geoalpha_ml/edge/: __init__.py  openvino_export.py
ml/src/geoalpha_ml/models/: __init__.py  temporal_attention.py
ml/src/geoalpha_ml/training/: __init__.py  train_loop.py
notebooks/: 01_regimes_on_revisits.ipynb  02_sensor_tasking_vs_portfolio.ipynb
quant/: Dockerfile  README.md  conftest.py  pyproject.toml
quant/src/geoalpha_quant/: __init__.py
quant/src/geoalpha_quant/attribution/: __init__.py  signal_attribution.py
quant/src/geoalpha_quant/backtest/: __init__.py  metrics.py  walk_forward.py
quant/src/geoalpha_quant/factors/: __init__.py  spectral_factors.py
quant/src/geoalpha_quant/io/: __init__.py  synthetic.py
quant/src/geoalpha_quant/optimization/: __init__.py  sensor_tasking.py
quant/src/geoalpha_quant/regime/: __init__.py  change_point.py  hmm.py
quant/src/geoalpha_quant/risk/: __init__.py  evt_anomaly.py  mc_uncertainty.py
quant/tests/: test_change_point.py  test_evt.py  test_factors.py  test_hmm.py  test_optimization.py  test_uncertainty.py
scripts/: smoke.py
service/: Dockerfile  pom.xml
service/src/main/java/io/geoalpha/service/: GeoAlphaServiceApplication.java
service/src/main/java/io/geoalpha/service/client/: AnalyticsClient.java
service/src/main/java/io/geoalpha/service/controller/: MissionController.java
service/src/main/java/io/geoalpha/service/domain/: AreaOfInterest.java  IntelProduct.java  Mission.java  MissionRepository.java
service/src/main/java/io/geoalpha/service/scheduler/: MissionScheduler.java
service/src/main/resources/: application.yml
service/src/test/java/io/geoalpha/service/: MissionRepositoryTest.java
web/: Dockerfile  next.config.mjs  package.json
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/regimes/: page.tsx
web/src/app/risk/: page.tsx
web/src/app/tasking/: page.tsx
web/src/components/map/: MissionMap.tsx
web/src/components/panels/: Sidebar.tsx  TopBar.tsx
